Upload image and video SP

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -483,3 +483,4 @@ exportwarning=Selected files are already exported, Do you want to continue?
 
 #nationality issue
 nationaltiywarning=Nationality already exist
+videoUpload=Video Upload
