--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -485,3 +485,4 @@ exportwarning=Selected files are already exported, Do you want to continue?
 
 #nationality issue
 nationaltiywarning=Nationality already exist
+videoUpload=Video Upload
