Module 5 Bug Report Solution and Rotation Changes logic Implementation

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -484,3 +484,8 @@ exportwarning=Selected files are already exported, Do you want to continue?
 #nationality issue
 nationaltiywarning=Nationality already exist
 videoUpload=Video Upload
+
+#Module 5 Bug Report Solution
+schedulePostpone=Schedule Next Day
+scheduleEarlier=Schedule Earlier
+#E Module 5 Bug Report Solution
