bug 788 throw exception

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -131,6 +131,7 @@ syncDescriptionException = Sync Description failed with error message:
 syncBankaccountException = Sync Bankaccount failed with error message: 
 syncAnamnesisFormException = Sync AnamnesisForm failed with error message: 
 syncAnamnesisCheckValuesException = Sync AnamnesisCheckValues failed with error message: 
+runTimeException = Illegal Data
 
 exportSuccessful = Export to DMZ Successful
 serverReturndError = Server Returned Error: 
