--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -415,6 +415,7 @@ simpatChangeBreak=Simpat Change Break :
 longBreak=Long Break :
 autoSPSuccess=Standardized Patient Assigned Successfully.
 autoAssignmentSuccess=Patients are assigned in Role Successfully.
+autoAssignmentFailure=Patients are Not assigned in Role because of some Errors.
 autoStudentSuccess=Students are Assigned Successfully.
 autoStudentFailure=Students are not Assigned Successfully.
 autoSPFailure=Standardized Patients are not Assigned Successfully.
