--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -490,3 +490,10 @@ videoUpload=Video Upload
 schedulePostpone=Schedule Next Day
 scheduleEarlier=Schedule Earlier
 #E Module 5 Bug Report Solution
+
+#role issue
+optionlbl=Option
+criterialbl=Criteria
+
+criteriadelete="Are you sure you want to delete this criteria?"
+optiondelete="Are you sure you want to delete this option?"
