Module 8: implemented logical break for SP

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -497,3 +497,5 @@ criterialbl=Criteria
 
 criteriadelete="Are you sure you want to delete this criteria?"
 optiondelete="Are you sure you want to delete this option?"
+
+breakPost=SP break
