--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -437,6 +437,7 @@ enterKeyword=Enter Keyword...*
 #Summonings
 error = Error
 noSelection=No Selection
+noDataFound=No Data Found
 
 #eosce
 importeosce=Import eOSCE
