--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -435,7 +435,7 @@ enterKeyword=Enter Keyword...*
 #Summonings
 error = Error
 noSelection=No Selection
-
+noDataFound=No Data Found
 #eosce
 importeosce=Import eOSCE
 importBtn=Import
