--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -502,3 +502,7 @@ criteriadelete="Are you sure you want to delete this criteria?"
 optiondelete="Are you sure you want to delete this option?"
 
 breakPost=SP break
+
+fileUploadError=Error in file upload.
+invalidImageFileType=Invalid image file type.
+invalidVideoFileType=Invalid image Video type.
