Added some i18n constants

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -6,7 +6,6 @@ addDoctor = Dozent hinzufügen
 addLangSkill = Sprachkenntnis hinzufügen
 addLanguage = Sprache hinzufügen
 addNationality = Nationalität hinzufügen
-addOsce = OSCE hinzufügen
 addPatient = SimPat hinzufügen
 addProfession = Beruf hinzufügen
 addQuestion = Frage hinzufügen
@@ -50,7 +49,6 @@ details = Einzelheiten
 edit = Bearbeiten
 editAnamnesisValue = Detail zur Person bearbeiten
 editClinic = Spital bearbeiten
-editOsce = OSCE bearbeiten
 editDoctor = Dozent bearbeiten
 editPatient = SimPat bearbeiten
 email = Email
@@ -78,8 +76,6 @@ logout = Abmelden
 male = Männlich
 maritalStatus = Zivilstand
 masterData = Stammdaten*
-maxCircuits = max. Parcours
-maxStudents = max. Studenten
 messages = Meldungen
 mobile = Mobiltelefon
 name = Name
@@ -125,7 +121,6 @@ slotUntilChange = max. Studenten bis Wechsel
 socialInsuranceNo = SV-Nummer
 specification = Spezifikation
 standardizedPatient = Simulationspatient
-stationLength = Postenlänge
 street = Strasse
 telephone = Telefon
 text = Text*
@@ -144,8 +139,15 @@ yes = Ja
 
 ######################### - GENERAL - #########################
 
+changesDiscarded = Sind Sie sicher? Änderungen werden nicht gespeichert!
 okBtn = Ok
 warning = Warnung
+
+heightUnit = cm
+weightUnit = kg
+ageUnit = Jahre
+
+violationMessage = Ungültige Eingabe
 
 ######################### - NAVIGATION - #########################
 success = Aktion erfolgreich*
@@ -232,6 +234,7 @@ topicDescription = Description*
 checklistTopic = Topic*
 #CheckListSubView/CheckList/ImportTopic
 importTopic= Import Topic*
+roleQuestions = Fragen
 #SearchCriteriaSubView
 searchCriteria = Suchkriterien*
 furtherCriteria = Weitere Kriterien*
@@ -281,6 +284,51 @@ roomMaterialUser = Bestimmt für...*
 roomMaterialPrice = Kosten*
 roomMaterialPriceType = Verrechnungsart*
 
+##################### - EXAMINATION - ######################
+
+#Add/Edit Semester Popup
+year = Jahr
+maxYearlySalary = Maximales Jahreseinkommen
+salarySimpat = Stundenlohn Simpat
+salaryExtra = Stundenlohn Statist
+
+#Manage Osces
+osce = OSCE
+osceMaxCircuits = Max. Parcours*
+osceMaxStudents = Max. Studenten
+osceStationLength = Postenlänge
+osceBreak=Pausen (kurz/mittel/lang)*
+min = min
+addOsce = OSCE hinzufügen
+
+#Manage Osces/Edit view
+editOsce = OSCE bearbeiten
+osceMaxRooms = Maximale Anzahl Räume*
+osceIsRepe = Ist Repetition*
+osceRepe = Repetition von OSCE*
+osceShortBreak = Dauer kurze Pause*
+osceLongBreak = Dauer lange Pause*
+osceLunchBreak = Dauer Mittagspause*
+osceMediumBreak = Dauer mittlere Pause*
+osceForTask = osceForTask*?
+osceVersion = Version
+#Manage Osces/Task Subview
+osceAddTask = Aufgabe zu OSCE hinzufügen*
+osceTaskName = Aufgabe
+osceTaskDeadline = zu erledigen bis
+osceTaskDone = Erledigt?
+osceWarningPast = Datum darf nicht in der Vergangenheit liegen.
+osceWarningFuture = Datum zu weit in der Zukunft. Sollte nicht weiter als 2 Jahre weg sein.
+
+#Circuit details view
+osceSimpatsInShortBreak = SimPats in Kurzpause*
+generate = Generieren
+clearAll = Alle löschen*
+fixedButtonString = Fixiert
+
+#Sequence Sub View
+splitSequence = Reihenfolge Trennen
+
 #SPEc Assignment C
 keywords = Keywords*
 learningObjectives = Learning Objectives*
@@ -299,9 +347,7 @@ optionValue = Value:*
 questionName = Question*
 questionInstruction = Instruction*
 #Assignment E]
-osceBreak=Pausen(k/m/l)*
 anamnesisForm = Anamneseformular*
-clearAll = Clear All*
 
 enterSortOrderWarn = Please enter a number abouve 0 .*
 unSaveOrderWarn = Please save order before ,then move this.*
@@ -324,7 +370,6 @@ calculation=Calculations*
 lunchbreak=Lunch Break :*
 lbendtime=End Time :*
 student=Students :*
-generate=Generate
 # End Assignment(Day) D
 
 #MODULE 3 START
@@ -405,7 +450,6 @@ examinerNotNull=Examiner Cannot be Null.
 # Module 5 changes {
 warningBreakIsAtEnd=There is a break post at end. Do you want to continue ?
 confirmationWhenStatusIsChangingFormClosedToFix=Do You Want To Continue ?
-fixedButtonString=Fixed
 closedButtonString=Close
 reopenButtonString=re-Open
 # Module 5 changes }
