--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -6,7 +6,6 @@ addDoctor = Add lecturer
 addLangSkill = Add language skill
 addLanguage = Add language
 addNationality = Add nationality
-addOsce = Add OSCE
 addPatient = Add simPat
 addProfession = Add profession
 addQuestion = Add question
@@ -50,7 +49,6 @@ details = Particulars*
 edit = Edit
 editAnamnesisValue = Edit anamnesis value*
 editClinic = Edit clinic
-editOsce = Edit OSCE
 editDoctor = Edit lecturer
 editPatient = Edit simPat
 email = Email
@@ -78,8 +76,6 @@ logout = Logout
 male = male
 maritalStatus = Marital status
 masterData = Master data*
-maxCircuits = Max. parcours*
-maxStudents = Max. students
 messages = Messages
 mobile = Mobile
 name = Name
@@ -125,7 +121,6 @@ slotUntilChange = max. students until change
 socialInsuranceNo = Social Insurance No.
 specification = Specification
 standardizedPatient = Standardized Patient
-stationLength = Station length*
 street = Street
 telephone = Telephone
 text = Text*
@@ -144,8 +139,15 @@ yes = Yes
 
 ######################### - GENERAL - #########################
 
+changesDiscarded = Are you sure? Changes will be discarded!
 okBtn = Ok
 warning = Warning
+
+heightUnit = cm
+weightUnit = kg
+ageUnit = years
+
+violationMessage = Invalid data entered
 
 ######################### - NAVIGATION - #########################
 success = Action successful*
@@ -232,6 +234,7 @@ topicDescription = Description*
 checklistTopic = Topic*
 #CheckListSubView/CheckList/ImportTopic
 importTopic= Import Topic*
+roleQuestions = Questions
 #SearchCriteriaSubView
 searchCriteria = Search criteria*
 furtherCriteria = Further criteria*
@@ -281,6 +284,51 @@ roomMaterialUser = Allotted to...*
 roomMaterialPrice = Cost*
 roomMaterialPriceType = Settlement type*
 
+##################### - EXAMINATION - ######################
+
+#Add/Edit Semester Popup
+year = Year
+maxYearlySalary = Maximum yearly salary
+salarySimpat = Salary Simpat
+salaryExtra = Salary extras
+
+#Manage Osces
+osce = OSCE
+osceMaxCircuits = Max. parcours*
+osceMaxStudents = Max. students
+osceStationLength = Station length
+osceBreak=Breaks (short/medium/long)*
+min = min
+addOsce = Add OSCE
+
+#Manage Osces/Edit view
+editOsce = Edit OSCE
+osceMaxRooms = Max. number of rooms*
+osceIsRepe = Is repetition*
+osceRepe = Repetition of OSCE*
+osceShortBreak = Short break duration*
+osceLongBreak = Long break duration*
+osceLunchBreak = Lunch break duration*
+osceMediumBreak = Medium break duration*
+osceForTask = osceForTask*?
+osceVersion = Version
+#Manage Osces/Task Subview
+osceAddTask = Add task to OSCE*
+osceTaskName = Task name
+osceTaskDeadline = Task deadline
+osceTaskDone = Done?
+osceWarningPast = Date may not be in the past.
+osceWarningFuture = Date too far in the future. Has to be within 2 years of now.
+
+#Circuit details view
+osceSimpatsInShortBreak = Simpats in short break*
+generate = Generate
+clearAll = Clear All*
+fixedButtonString = Fixed
+
+#Sequence Sub View
+splitSequence = Split sequence
+
 #SPEc Assignment C
 keywords = Keywords*
 learningObjectives = Learning Objectives*
@@ -299,9 +347,7 @@ optionValue = Value:*
 questionName = Question*
 questionInstruction = Instruction*
 #Assignment E]
-osceBreak=Pausen(k/m/l)*
 anamnesisForm = Anamneseformular*
-clearAll = Clear All*
 
 enterSortOrderWarn = Please enter a number abouve 0 .*
 unSaveOrderWarn = Please save order before ,then move this.*
@@ -324,7 +370,6 @@ calculation=Calculations*
 lunchbreak=Lunch Break :*
 lbendtime=End Time :*
 student=Students :*
-generate=Generate
 # End Assignment(Day) D
 
 #MODULE 3 START
@@ -405,7 +450,6 @@ examinerNotNull=Examiner Cannot be Null.
 # Module 5 changes {
 warningBreakIsAtEnd=There is a break post at end. Do you want to continue ?
 confirmationWhenStatusIsChangingFormClosedToFix=Do You Want To Continue ?
-fixedButtonString=Fixed
 closedButtonString=Close
 reopenButtonString=re-Open
 # Module 5 changes }
