- Added disable functionality to IconButton - Added few translations - Improved Header view of CircuitView

--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -36,7 +36,6 @@ clinicalSpecialisation = Disziplin
 comment = Kommentar
 comparison = Vergleich
 complexity = Komplexität
-contactInfo = Kontaktinformationen
 country = Land
 createClinic = Klinik erstellen
 createDoctor = Dozent erstellen
@@ -148,6 +147,9 @@ weightUnit = kg
 ageUnit = Jahre
 
 violationMessage = Ungültige Eingabe
+
+######################### - PDFEXPORT - #########################
+contactInfo = Kontaktinformationen
 
 ######################### - NAVIGATION - #########################
 success = Aktion erfolgreich*
@@ -484,8 +486,8 @@ noSelection=No Selection
 noDataFound=No Data Found
 
 #eosce
-importeosce=Import eOSCE
-importBtn=Import
+importeosce=Aus eOSCE importieren
+importBtn=Importieren
 processed=Processed
 unprocessed=Unprocessed
 processedfiles=Processed Files
@@ -518,16 +520,16 @@ validatePlusMinus = Please select + or - minute option.
 # Module : 15
 
 #export osce
-exportosce=Export OSCE
-exportprocessed=Exported Files
-exportunprocessed=Files To Be Export
-exporterror=Error in export files
-exportprocessederror=Error in fetching processed files
-exportunprocessederror=Error in fetching unProcessed files
-exportsuccess=Files put in S3 successfully
-exportprocessedlabel=All processed files exported
-exportprocessedmsg=All files processed
-exportwarning=Selected files are already exported, Do you want to continue?
+exportosce=OSCE exportieren*
+exportprocessed=Exportierte Dateien*
+exportunprocessed=Zu exportierende Dateien*
+exporterror=Fehler in Exportdateien*
+exportprocessederror=Error in fetching processed files*
+exportunprocessederror=Error in fetching unProcessed files*
+exportsuccess=Files put in S3 successfully*
+exportprocessedlabel=All processed files exported*
+exportprocessedmsg=All files processed*
+exportwarning=Selected files are already exported, Do you want to continue?*
 
 #nationality issue
 nationaltiywarning=Nationality already exist
