--- a/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/java/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -36,7 +36,6 @@ clinicalSpecialisation = Discipline
 comment = Comment
 comparison = Comparison
 complexity = Complexity
-contactInfo = Contact details
 country = Country
 createClinic = Create clinic
 createDoctor = Create lecturer
@@ -148,6 +147,9 @@ weightUnit = kg
 ageUnit = years
 
 violationMessage = Invalid data entered
+
+######################### - PDFEXPORT - #########################
+contactInfo = Contact details
 
 ######################### - NAVIGATION - #########################
 success = Action successful*
@@ -481,7 +483,7 @@ error = Error
 noSelection=No Selection
 noDataFound=No Data Found
 #eosce
-importeosce=Import eOSCE
+importeosce=Import from eOSCE
 importBtn=Import
 processed=Processed
 unprocessed=Unprocessed
@@ -515,16 +517,16 @@ validatePlusMinus = Please select + or - minute option.
 # Module : 15
 
 #export osce
-exportosce=Export OSCE
-exportprocessed=Exported Files
-exportunprocessed=Files To Be Export
-exporterror=Error in export files
-exportprocessederror=Error in fetching processed files
-exportunprocessederror=Error in fetching unProcessed files
-exportsuccess=Files put in S3 successfully
-exportprocessedlabel=All processed files exported
-exportprocessedmsg=All files processed
-exportwarning=Selected files are already exported, Do you want to continue?
+exportosce=Export OSCE*
+exportprocessed=Exported files*
+exportunprocessed=Files to be exported*
+exporterror=Error in export files*
+exportprocessederror=Error in fetching processed files*
+exportunprocessederror=Error in fetching unProcessed files*
+exportsuccess=Files put in S3 successfully*
+exportprocessedlabel=All processed files exported*
+exportprocessedmsg=All files processed*
+exportwarning=Selected files are already exported, Do you want to continue?*
 
 #nationality issue
 nationaltiywarning=Nationality already exist
