Files Of Learning Objective, TimeTableGeneratorTest and other issue

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -549,3 +549,9 @@ breakPost=SP break
 fileUploadError=Error in file upload.
 invalidImageFileType=Invalid image file type.
 invalidVideoFileType=Invalid image Video type.
+
+#learning
+appliance=Appliance
+majorSuccess=Main skill added successfully
+minorSuccess=Minor skill added successfully
+addSkill=Add Skill
