Correct in Role Module and Module 8.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -555,3 +555,6 @@ appliance=Appliance
 majorSuccess=Main skill added successfully
 minorSuccess=Minor skill added successfully
 addSkill=Add Skill
+specialisation=Specialisation*
+questionNotNull=Checklist Question Cannot be null
+checklistTopicNotNull=CheckList Topic Cannot be null
