- Added translations and constants in client/ui/examination/* - Forced Buttontext to not wrap - changed some backgrounds - changed tabpanel borders - changed some icons in client/ui/examination - changed width of circuit panel - removed notification mole

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -154,15 +154,23 @@ Genrated_Status="Osce_Genrated_Status";
 Fixed_Status="Osce_Fixed_Status";
 Closed_Status="Osce_Closed_Status";
 
+#OsceStatus
+OSCE_NEW = New OSCE*
+OSCE_BLUEPRINT = OSCE blueprint*
+OSCE_GENRATED = Generated OSCE*
+OSCE_FIXED = Frozen OSCE*
+OSCE_CLOSED = Closed OSCE*
+
 #G: SPEC START =
-HS=HS
-FS=FS
+HS = HS
+FS = FS
 # G: SPEC START =
 # 5C: SPEC START
-NORMAL=NORMAL
-BREAK=BREAK
-ANAMNESIS_THERAPY=ANAMNESIS_THERAPY
-PREPARATION=PREPARATION
+# PostType
+NORMAL = Regular Station*
+BREAK= Break*
+ANAMNESIS_THERAPY = Double Station*
+PREPARATION = Preparation Station*
 # 5C: SPEC END
 
 err_DialogBoxTitle = Error prompts
