--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1,5 +1,4 @@
 add = Add
-addAnamnesisValue = Add anamnesis value*
 addAnswer = Add answer
 addClinic = Add clinic
 addDoctor = Add lecturer
@@ -8,7 +7,6 @@ addLanguage = Add language
 addNationality = Add nationality
 addPatient = Add simPat
 addProfession = Add profession
-addQuestion = Add question
 addRoom = Add room
 addTitle = Add title
 addTrait = Add trait
@@ -141,6 +139,7 @@ yes = Yes
 changesDiscarded = Are you sure? Changes will be discarded!
 okBtn = Ok
 warning = Warning
+alert = Alert
 
 heightUnit = cm
 weightUnit = kg
@@ -152,7 +151,7 @@ violationMessage = Invalid data entered
 contactInfo = Contact details
 
 ######################### - NAVIGATION - #########################
-success = Action successful*
+success = Operation successful*
 tableSize = Table size
 
 #SimPat
@@ -191,6 +190,11 @@ professions = Professions
 rooms = Rooms
 log = Log
 importObjective = Import Objective
+
+######################### - SP - #########################
+#AnamnesisCheckView
+addQuestion = Add question
+editQuestion = Edit question
 
 ######################### - ROLE - #########################
 
@@ -324,9 +328,52 @@ osceWarningFuture = Date too far in the future. Has to be within 2 years of now.
 
 #Circuit details view
 osceSimpatsInShortBreak = Simpats in short break*
-generate = Generate
+generate = Generate*
 clearAll = Clear All*
-fixedButtonString = Fixed
+fixedButtonString = Freeze*
+reopenButtonString= Reopen*
+circuitDay = OSCE Day*
+circuitTimes = Timeframe
+circuitDate = Date*
+circuitStart = Start time*
+circuitEnd = Latest end time*
+circuitCalculations = Calculated times*
+circuitLunchBreak=Lunch break*
+circuitEndTime = End time*
+circuitLunchBreakStart=Lunch break start*
+circuitStation = Station*
+select = Select*
+circuitUnnamedSequence = Unnamed Sequence*
+warningPostType = Please select type of station!*
+warningStatusNotChanged = OSCE status not changed to "new"!*
+warningTimeFormat = Please enter time in format hh:mm!*
+warningTimeHour = A day only has 24 hours!*
+warningTimeMinute = An hour only has 60 minutes!*
+warningDateEmpty = Date has to be defined!*
+warningStartTime = Starting time has to be defined!*
+warningEndTime = End time has to be defined!*
+warningSplitting = No further splitting allowed!*
+warningNoOsceDay = No OSCE day for this OSCE defined!*
+warningBreakIsAtEnd= There is a break station at the end of the circuit. Do you want to continue?*
+warningScheduleNotGenerated = Schedule Not Generated and OSCE status not changed to 'generated'!*
+warningScaffoldNotGenerated = OSCE scaffold not generated and OSCE status not changed to 'generated'!*
+warningNotGenerated = OSCE status not changed to 'generated'!*
+selectSpecialisation = Select discipline*
+confirmationWhenStatusIsChangingFormClosedToFix=Do You Want To Continue?*
+confirmationGoAhead = Generous OSCE-Manager allows you to go ahead with whatever you were doing!*
+warningNotFixed = OSCE Status not changed to 'Fixed'!*
+confirmationClosed = OSCE has been closed. Assignments are generated.*
+warningNotClosed = OSCE-status not changed to 'Closed'!*
+warningNoAssignment = Assignment not generated for OSCE and OSCE status not changed to 'Closed'!*
+warningSelectSequence = Please select at least one sequence!*
+warningRotationUnassigned = Rotation not assigned to next days sequence!*
+warningRotationUnassignedPrevious = Rotation is not assigned to previous sequence!*
+confirmationAssigned = Rotation successfully assigned to next sequence!*
+confirmationAssignedPrevious = Rotation successfully assigned to previoussequence!*
+confirmationDayCreated = New day created and rotation successfully assigned to sequence!*
+confirmationRoomAssigned = Room successfully assigned to station!*
+warningScheduleNotPostponed = Schedule is not postponed!*
+warningNoPreviousDay = No previous day!*
 
 #Sequence Sub View
 splitSequence = Split sequence
@@ -355,24 +402,10 @@ enterSortOrderWarn = Please enter a number abouve 0 .*
 unSaveOrderWarn = Please save order before ,then move this.*
 leavePageWarn = You have not save order , are you sure leave this page ?*
 anamnesisCheckTitle = Text*
-select = Select*
 animationTime = 3000
 widthSize = 1225
 widthMin = 705
 deleteOsceBluePrintPost=Do you want to delete Osce Blueprint ?.*
-
-#Assignment(Day) D
-
-day=Day 1*
-presents=presents*
-date=Date :*
-starttime=Start Time :*
-endtime=End Time Max :*
-calculation=Calculations*
-lunchbreak=Lunch Break :*
-lbendtime=End Time :*
-student=Students :*
-# End Assignment(Day) D
 
 #MODULE 3 START
 loading = loading...
@@ -450,10 +483,7 @@ examinerNotNull=Examiner Cannot be Null.
 #Modulue 8]
 
 # Module 5 changes {
-warningBreakIsAtEnd=There is a break post at end. Do you want to continue ?
-confirmationWhenStatusIsChangingFormClosedToFix=Do You Want To Continue ?
 closedButtonString=Close
-reopenButtonString=re-Open
 # Module 5 changes }
 
 examiner=Examiner
@@ -468,8 +498,6 @@ autoSPFailure=Standardized Patients are not Assigned Successfully.
 failure= Failure Occured
 
 # Module 5 bug Report Change
-post=Post
-lunchBreakStart=Lunch Break Start :
 osceSequence=Osce Sequence :
 # E Module 5 bug Report Change
 
