--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -142,7 +142,6 @@ syncAnamnesisFormException = Sync AnamnesisForm failed with error message:
 syncAnamnesisCheckValuesException = Sync AnamnesisCheckValues failed with error message: 
 runTimeException = Illegal Data
 
-
 exportSuccessful = Export to DMZ Successful
 serverReturndError = Server Returned Error: 
 importSussessful = Import Successful
@@ -155,15 +154,22 @@ Genrated_Status="Osce_Genrated_Status";
 Fixed_Status="Osce_Fixed_Status";
 Closed_Status="Osce_Closed_Status";
 
+#OsceStatus
+OSCE_NEW = Neuer OSCE*
+OSCE_BLUEPRINT = OSCE Vorlage*
+OSCE_GENRATED = Generierter OSCE*
+OSCE_FIXED = Fixierter OSCE*
+OSCE_CLOSED = Geschlossener OSCE*
+
 #G: SPEC START =
-HS=HS
-FS=FS
+HS = HS
+FS = FS
 # G: SPEC START =
 # 5C: SPEC START
-NORMAL=NORMAL
-BREAK=BREAK
-ANAMNESIS_THERAPY=ANAMNESIS_THERAPY
-PREPARATION=PREPARATION
+NORMAL = Regul\u00E4rer Posten*
+BREAK = Pause*
+ANAMNESIS_THERAPY = Doppelposten*
+PREPARATION = Vorbereitungsposten*
 # 5C: SPEC END
 
 err_DialogBoxTitle = Fehler aufgefordert
