--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -558,3 +558,6 @@ addSkill=Add Skill
 specialisation=Specialisation*
 questionNotNull=Checklist Question Cannot be null
 checklistTopicNotNull=CheckList Topic Cannot be null
+
+shiftLunchBreakNext=Shift Lunch Break Next
+ShiftLunchBreakPrev=Shift Lunch Break Previous
