--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -561,3 +561,6 @@ addSkill=Add Skill
 specialisation=Specialisation*
 questionNotNull=Checklist Question Cannot be null
 checklistTopicNotNull=CheckList Topic Cannot be null
+
+shiftLunchBreakNext=Shift Lunch Break Next
+ShiftLunchBreakPrev=Shift Lunch Break Previous
