Resolution Setting Files And Bugreport Parcours Files.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1,225 +1,225 @@
-add = Hinzufügen
-addAnamnesisValue = Detail zur Person hinzufügen*
-addAnswer = Antwort hinzufügen
-addClinic = Klinik hinzufügen
-addDoctor = Dozent hinzufügen
-addLangSkill = Sprachkenntnis hinzufügen
-addLanguage = Sprache hinzufügen
-addNationality = Nationalität hinzufügen
-addPatient = SimPat hinzufügen
-addProfession = Beruf hinzufügen
-addQuestion = Frage hinzufügen
-addRoom = Raum hinzufügen
-addTitle = Titel hinzufügen
-addTrait = Merkmal hinzufügen
-addUser = Benutzer hinzufügen
-administrator = Benutzer
-age = Alter
-all = Alle
-answer = Antwort
-answered = Beantwortet?
-answerGiven = Wurde beantwortet
-answerPending = Unbeantwortet
-aviableRole = Verfügbare Rollen
+add = Add
+addAnamnesisValue = Add anamnesis value*
+addAnswer = Add answer
+addClinic = Add clinic
+addDoctor = Add lecturer
+addLangSkill = Add language skill
+addLanguage = Add language
+addNationality = Add nationality
+addPatient = Add simPat
+addProfession = Add profession
+addQuestion = Add question
+addRoom = Add room
+addTitle = Add title
+addTrait = Add trait
+addUser = Add user
+administrator = User
+age = Age
+all = All
+answer = Answer
+answered = Answered?
+answerGiven = Answer given
+answerPending = Answer pending
+aviableRole = Available roles 
 bank = Bank
-bankAccount = Bankkonto
-basicFilter = Primärer Filter
+bankAccount = Bank account
+basicFilter = Primary filter
 bic = BIC
-bindType = Verknüpfung
-birthday = Geburtsdatum
+bindType = Linkage
+birthday = Birth date
 bmi = BMI
-cancel = Abbrechen
+cancel = Cancel
 checkListItem = Checklist Item*
-city = Ort
-clinic = Klinik
-clinicalSpecialisation = Disziplin
-comment = Kommentar
-comparison = Vergleich
-complexity = Komplexität
-country = Land
-createClinic = Klinik erstellen
-createDoctor = Dozent erstellen
-criterion = Kriterium
-dateTime = Datum/Uhrzeit
+city = City
+clinic = Clinic
+clinicalSpecialisation = Discipline
+comment = Comment
+comparison = Comparison
+complexity = Complexity
+country = Country
+createClinic = Create clinic
+createDoctor = Create lecturer
+criterion = Criterion
+dateTime = Date/time
 dateTimeFormat = dd. MMMM yyyy
-delete = Löschen
-description = Kommentar
-details = Einzelheiten
-edit = Bearbeiten
-editAnamnesisValue = Detail zur Person bearbeiten
-editClinic = Spital bearbeiten
-editDoctor = Dozent bearbeiten
-editPatient = SimPat bearbeiten
+delete = Delete
+description = Comment
+details = Particulars*
+edit = Edit
+editAnamnesisValue = Edit anamnesis value*
+editClinic = Edit clinic
+editDoctor = Edit lecturer
+editPatient = Edit simPat
 email = Email
-enterAnswer = Bitte Antwort eingeben...
-enterQuestion = Bitte Frage eingeben...
-export = Exportieren
-female = Weiblich
-field = Feld
-filterTitle = Titel-Filter
-from = Von
-gender = Geschlecht
-generalInformation = Allgemeine Informationen
+enterAnswer = Please enter answer...
+enterQuestion = Please enter question...
+export = Export
+female = Female
+field = Field
+filterTitle = Title filter
+from = From
+gender = Gender
+generalInformation = General Information
 googleMaps = Google maps
-handledConfidentially = Diese Informationen werden vertraulich behandelt.
-height = Grösse
+handledConfidentially = Data in this document is handled confidentially.
+height = Height
 iban = IBAN
-insideTitle = Gehört zu Titel
-itemName=Item Name*
-itemValue=Item Value*
-language = Sprache
-languageSkills = Sprachkenntnisse
-location = Ort
-logDetails = Log-Details
-logout = Abmelden
-male = Männlich
-maritalStatus = Zivilstand
-masterData = Stammdaten*
-messages = Meldungen
-mobile = Mobiltelefon
+insideTitle = Belongs to title
+itemName = Item Name*
+itemValue = Item Value*
+language = Language
+languageSkills = Language skills
+location = Location
+logDetails = Log details
+logout = Logout
+male = male
+maritalStatus = Marital status
+masterData = Master data*
+messages = Messages
+mobile = Mobile
 name = Name
-nationality = Nationalität
-no = Nein
-noMatter = Macht nichts*
-noTitle = Frage gehört zu keinem Titel
-officeDetails = Sekretariat
-order = Reihenfolge
-ownerName = Inhaber
+nationality = Nationality
+no = No
+noMatter = Don't care*
+noTitle = Question does not belong to a title.
+officeDetails = Office
+order = Order
+ownerName = Owner
 patient = SimPat
-patientHas = SimPat hat
-patientSpeaks = SimPat spricht
-persons = Personen
+patientHas = SimPat has
+patientSpeaks = SimPat speaks
+persons = Persons
 plz = PLZ
-plzCity = PLZ, Ort
-possibleAnswers = Mögliche Antworten
-preName = Vorname
-previousQuestion = Vorherige Frage
-previousTitle = Vorheriger Titel
-print = Drucken
-profession = Beruf
-question = Frage
-reallyDelete = Wirklich löschen?
-resetFilters = Filter zurücksetzen
-responsibilities = Zuständigkeiten
-roleAssignments = Rollenzuweisungen
-roomLength = Länge
-roomNumber = Raum-Nr.
-roomWidth = Breite
-send = Zu DMZ senden*
-pull = Aus DMZ laden*
-save = Speichern
-saveOrder = Reihenfolge Speichern
-scars = Narben*
-searchField = Suche...
-searchFor = Suchen nach...
-selectLanguage = Sprache wählen:
-showAnswered = beantwortete anzeigen
-showUnanswered = unbeantwortete anzeigen
+plzCity = PLZ, City
+possibleAnswers = Possible answers
+preName = First name
+previousQuestion = previous question
+previousTitle = previous title
+print = Print
+profession = Profession
+question = Question
+reallyDelete = Really delete?
+resetFilters = Reset filters
+responsibilities = Responsibilities
+roleAssignments = Role assignments
+roomLength = Length
+roomNumber = Room No.
+roomWidth = Width
+send = Send To DMZ*
+pull = Pull From DMZ*
+save = Save
+saveOrder = Save Order
+scars = Scars*
+searchField = Search...
+searchFor = Search for...
+selectLanguage = Select language:
+showAnswered = Show answered
+showUnanswered = Show unanswered
 simPats = SimPats
-slotUntilChange = max. Studenten bis Wechsel
-socialInsuranceNo = SV-Nummer
-specification = Spezifikation
-standardizedPatient = Simulationspatient
-street = Strasse
-telephone = Telefon
+slotUntilChange = max. students until change
+socialInsuranceNo = Social Insurance No.
+specification = Specification
+standardizedPatient = Standardized Patient
+street = Street
+telephone = Telephone
 text = Text*
-thisIsTheFirstQuestion = keine (als erste Frage hinzufügen)
-title = Titel
-to = Zu
+thisIsTheFirstQuestion = None (this is the first question)
+title = Title
+to = To
 TopicsAndSpecDetailsViewPopupXPosition=1120
 TopicsAndSpecDetailsViewPopupYPosition=45
 TopicsAndSpecViewPopupXPosition=470
 TopicsAndSpecViewPopupYPosition=45
-type = Typ
-value = Wert
-weight = Gewicht
-workPermission = Arbeitsbewilligung
-yes = Ja
+type = Type
+value = Value
+weight = Weight
+workPermission = Work permission
+yes = Yes
 
 ######################### - GENERAL - #########################
 
-changesDiscarded = Sind Sie sicher? Änderungen werden nicht gespeichert!
+changesDiscarded = Are you sure? Changes will be discarded!
 okBtn = Ok
-warning = Warnung
+warning = Warning
 
 heightUnit = cm
 weightUnit = kg
-ageUnit = Jahre
+ageUnit = years
 
-violationMessage = Ungültige Eingabe
+violationMessage = Invalid data entered
 
 ######################### - PDFEXPORT - #########################
-contactInfo = Kontaktinformationen
+contactInfo = Contact details
 
 ######################### - NAVIGATION - #########################
-success = Aktion erfolgreich*
-tableSize = Tabellengrösse
+success = Action successful*
+tableSize = Table size
 
 #SimPat
 simPat = SimPat
-simulationPatients = Simulationspatienten
-traits = Merkmale
-anamnesisValues = Fragebogen*
+simulationPatients = Simulated patients
+traits = Traits
+anamnesisValues = Questionnaire*
 
 #Doctors
 doctors = Lecturers
-clinics = Kliniken
+clinics = Clinics
 
 #Role
-role = Rolle
-roles = Rollen
-topicsAndSpec = Themen & Spezifikation*
-roleScriptTemplate = Rollenskriptvorlage
+role = Role
+roles = Roles
+topicsAndSpec=Topics & specification*
+roleScriptTemplate = Role script template
 students = Studenten
 
 #Exams
-exams = Prüfungen
+exams = Exams
 semester = Semester
-manageOsces = OSCEs verwalten
-circuit = Parcours
-examinationSchedule = Prüfungsplan
-sendSummonings = Aufgebote versenden
-printIndividualSchedules = Laufpläne erstellen*
-exportBellSchedule = Klingelplan erstellen*
+manageOsces = Manage OSCEs
+circuit = Parcours*
+examinationSchedule = Examination plan*
+sendSummonings = Send summonings
+printIndividualSchedules = Create Operating plans*
+exportBellSchedule = Export bell schedule
 
-#Systemadministration
-administration = Systemadministration
-user = Benutzer
-nationalities = Nationalitäten
-languages = Sprachen
-professions = Berufe
-rooms = Räume
+#System administration
+administration = System administration
+user = User
+nationalities = Nationalities
+languages = Languages
+professions = Professions
+rooms = Rooms
 log = Log
-importObjective = Lernziel importieren
+importObjective = Import Objective
 
 ######################### - ROLE - #########################
 
 ####ROLES
 
 #RoleView
-previousRole = Vorherige Rolle*
+previousRole = Previous Role*
 homeRole = Home*
 #FilterPanel
 roleComplexity = Complexity*
 #RoleEditView
-addRole = Rolle hinzufügen*
-editRole = Rolle bearbeiten*
-newRole = Neue Rolle*
+addRole = Add Role*
+editRole = Edit Role*
+newRole = New Role*
 roleActive = Active*
 #RoleDetailsView/RoleDetail
-roleDetail = Rollendetails*
-roleName = Rollenbezeichnung*
-roleAcronym = Abkürzung*
-roleType = Rollentyp*
+roleDetail = Role Detail*
+roleName = Role designation*
+roleAcronym = Acronym*
+roleType = Role type*
 #RoleDetailsView/RoleParticipants
-roleParticipants = Rollenbeteiligte*
-author = Autor*
-reviewer = Revisor*
-addAuthor = Autor hinzufügen*
-addReviewer = Revisor hinzufügen*
+roleParticipants = Role Participants*
+author = Author
+reviewer = Reviewer
+addAuthor = Add author
+addReviewer = Add reviewer
 #RoleDetailsView/Keyword
-keyword=Schlüsselwort*
-addKeyword = Schlüsselwort hinzufügen*
+keyword=Keyword*
+addKeyword = Add keyword
 #RoleDetailsView/Learning
 learning = Learning*
 majorBtnLbl = Add major*
@@ -229,115 +229,115 @@ classiTopic = Classification Topic*
 topicLbl = Topic*
 skillLevel = Skill Level*
 #CheckListSubView/CheckList/AddCkeckListTopic
-checkList = Checkliste*
-addCheckListTopic = Checklistengruppe hinzufügen*
-addCheckListQuestion = Frage hinzufügen*
+checkList = Checklist*
+addCheckListTopic = Add CheckList Topic*
+addCheckListQuestion = Add CheckList Question*
 topicDescription = Description*
 checklistTopic = Topic*
 #CheckListSubView/CheckList/ImportTopic
 importTopic= Import Topic*
-roleQuestions = Fragen
+roleQuestions = Questions
 #SearchCriteriaSubView
-searchCriteria = Suchkriterien*
-furtherCriteria = Weitere Kriterien*
-addSimpleSearchCriteria= Suchkriterium hinzufügen*
+searchCriteria = Search criteria*
+furtherCriteria = Further criteria*
+addSimpleSearchCriteria= Add search criterion*
 simpleSearchCriteriaName= Name*
-simpleSearchCriteriaValue= Wert*
+simpleSearchCriteriaValue= Value*
 #File
-roleFile = Datei*
-filePath= Pfad*
-fileDescription = Beschreibung*
-addRoleFile= Neue Rollendatei*
+roleFile = File*
+filePath= Path*
+fileDescription = Description*
+addRoleFile = Add role file*
 #RoleScript
-roleScript = Rollenskript*
-selectRoleTemplate = Rollenvorlage auswählen*
+roleScript = Role script*
+selectRoleTemplate = Select role template*
 #MajorMinorPopup
 majorLbl=Major Changes*
 minorLbl=Minor Changes*
 
 ####Topics & Specification
 
-roleTopic = Fachgebiet*
-addDiscipline = Disziplin hinzufügen*
-addRoleTopic = Fachgebiet hinzufügen*
-studyYear = SJ
-studyYears = Studienjahr
+roleTopic = Specific field*
+addDiscipline = Add discipline*
+addRoleTopic = Add specific field*
+studyYear = SY
+studyYears = Study year
 
 ####Role Template
 
-addRoleScriptTemplate = Neue Vorlage hinzufügen*
-dateCreated = Erstellt am*
-dateEdited = Zuletzt bearbeitet*
-addItem = Abschnitt hinzufügen*
-deletedItemName = Gelöschter Punkt*
-roleAccess = Zugriff*
-roleItemName = Titel*
-addRoleSubItem = Unterpunkt hinzufügen*
+addRoleScriptTemplate = Add new template*
+dateCreated = Date created*
+dateEdited = Date edited*
+addItem = Add item*
+deletedItemName = Deleted item*
+roleAccess = Access*
+roleItemName = Title*
+addRoleSubItem = Add sub item*
 
 ####ROOM MATERIALS
 
-roomMaterialType = Objektart
-roomMaterials = Raumausstattung*
-addMaterial = Objekt hinzufügen*
-editMaterial = Objekt bearbeiten*
-roomMaterialName = Objektbezeichnung*
-roomMaterialNumber = Anzahl*
-roomMaterialUser = Bestimmt für...*
-roomMaterialPrice = Kosten*
-roomMaterialPriceType = Verrechnungsart*
+roomMaterialType = Object type
+roomMaterials = Room facilities*
+addMaterial = Add object*
+editMaterial = Edit object*
+roomMaterialName = Object designation*
+roomMaterialNumber = Quantity*
+roomMaterialUser = Allotted to...*
+roomMaterialPrice = Cost*
+roomMaterialPriceType = Settlement type*
 
 ##################### - EXAMINATION - ######################
 
 #Add/Edit Semester Popup
-year = Jahr
-maxYearlySalary = Maximales Jahreseinkommen
-salarySimpat = Stundenlohn Simpat
-salaryExtra = Stundenlohn Statist
+year = Year
+maxYearlySalary = Maximum yearly salary
+salarySimpat = Salary Simpat
+salaryExtra = Salary extras
 
 #Manage Osces
 osce = OSCE
-osceMaxCircuits = Max. Parcours*
-osceMaxStudents = Max. Studenten
-osceStationLength = Postenlänge
-osceBreak=Pausen (kurz/mittel/lang)*
+osceMaxCircuits = Max. parcours*
+osceMaxStudents = Max. students
+osceStationLength = Station length
+osceBreak=Breaks (short/medium/long)*
 min = min
-addOsce = OSCE hinzufügen
+addOsce = Add OSCE
 
 #Manage Osces/Edit view
-editOsce = OSCE bearbeiten
-osceMaxRooms = Maximale Anzahl Räume*
-osceIsRepe = Ist Repetition*
-osceRepe = Repetition von OSCE*
-osceShortBreak = Dauer kurze Pause*
-osceLongBreak = Dauer lange Pause*
-osceLunchBreak = Dauer Mittagspause*
-osceMediumBreak = Dauer mittlere Pause*
+editOsce = Edit OSCE
+osceMaxRooms = Max. number of rooms*
+osceIsRepe = Is repetition*
+osceRepe = Repetition of OSCE*
+osceShortBreak = Short break duration*
+osceLongBreak = Long break duration*
+osceLunchBreak = Lunch break duration*
+osceMediumBreak = Medium break duration*
 osceForTask = osceForTask*?
 osceVersion = Version
 #Manage Osces/Task Subview
-osceAddTask = Aufgabe zu OSCE hinzufügen*
-osceTaskName = Aufgabe
-osceTaskDeadline = zu erledigen bis
-osceTaskDone = Erledigt?
-osceWarningPast = Datum darf nicht in der Vergangenheit liegen.
-osceWarningFuture = Datum zu weit in der Zukunft. Sollte nicht weiter als 2 Jahre weg sein.
+osceAddTask = Add task to OSCE*
+osceTaskName = Task name
+osceTaskDeadline = Task deadline
+osceTaskDone = Done?
+osceWarningPast = Date may not be in the past.
+osceWarningFuture = Date too far in the future. Has to be within 2 years of now.
 
 #Circuit details view
-osceSimpatsInShortBreak = SimPats in Kurzpause*
-generate = Generieren
-clearAll = Alle löschen*
-fixedButtonString = Fixiert
+osceSimpatsInShortBreak = Simpats in short break*
+generate = Generate
+clearAll = Clear All*
+fixedButtonString = Fixed
 
 #Sequence Sub View
-splitSequence = Reihenfolge Trennen
+splitSequence = Split sequence
 
 #SPEc Assignment C
 keywords = Keywords*
 learningObjectives = Learning Objectives*
 #Assignment H
-imageUpload= Bild erfolgreich hochgeladen*
+imageUpload= Image uploaded successfully*
 
-#Assignment J
+#Assignment H
 table_item=table_item*
 rich_text_item=rich_text_item*
 #By SPEC End
@@ -392,10 +392,10 @@ pleaseSelectRole = Please Select Role
 patientIsNotAccepted = Patient is not accepted.
 # End MODULE 3
 
-updateOsce=OSCE Daten erfolgreich aktualisiert*
-deleteTask=Wollen Sie diese Aufgabe wirklich löschen?*
-saveOsceBlueprint=OSCE-Postenvorlage erfolgreich gespeichert.*
-osceDaySuccess=OSCE Tag erfolgreich aktualisiert.*
+updateOsce=OSCE Data Updated sucessfully*
+deleteTask=Do you really want to delete this task?*
+saveOsceBlueprint=Osce Post Blueprint Saved Successfully.*
+osceDaySuccess=Osce Day Updated successfully*
 
 #MODULE 6 START
 importstudent = Students import
@@ -478,16 +478,13 @@ osceSequence=Osce Sequence :
 # Issue Role Module
 enterKeyword=Enter Keyword...*
 
-# End Assignment(Day) D
-
 #Summonings
 error = Error
 noSelection=No Selection
 noDataFound=No Data Found
-
 #eosce
-importeosce=Aus eOSCE importieren
-importBtn=Importieren
+importeosce=Import from eOSCE
+importBtn=Import
 processed=Processed
 unprocessed=Unprocessed
 processedfiles=Processed Files
@@ -505,12 +502,12 @@ delsuccess=File Deleted Succssfully
 #eosce
 
 # Module : 15
-bellScheduleUpload = Klingelplan Upload 
-bellScheduleExport = Klingelplan Export
+bellScheduleUpload = Bell Schedule Upload 
+bellScheduleExport = Bell Schedule Export
 plusTime = +
 minusTime = -
-bellSchedule = Klingelplan
-moveTime = uhrzeiten verschieben
+bellSchedule = Bell Schedule
+moveTime = Move Time
 minute = minute
 dateHeader = Date
 timeHeader = Time
@@ -520,10 +517,10 @@ validatePlusMinus = Please select + or - minute option.
 # Module : 15
 
 #export osce
-exportosce=OSCE exportieren*
-exportprocessed=Exportierte Dateien*
-exportunprocessed=Zu exportierende Dateien*
-exporterror=Fehler in Exportdateien*
+exportosce=Export OSCE*
+exportprocessed=Exported files*
+exportunprocessed=Files to be exported*
+exporterror=Error in export files*
 exportprocessederror=Error in fetching processed files*
 exportunprocessederror=Error in fetching unProcessed files*
 exportsuccess=Files put in S3 successfully*
@@ -564,3 +561,7 @@ checklistTopicNotNull=CheckList Topic Cannot be null
 
 shiftLunchBreakNext=Shift Lunch Break Next
 ShiftLunchBreakPrev=Shift Lunch Break Previous
+
+headerValueMessage=Please Enter Valid Value For OSCE
+startEndTimeMessage=please enter start time less then end time
+generateClickTimeMessage=Please enter  value for specialisation and roletopic
