--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -559,5 +559,8 @@ specialisation=Specialisation*
 questionNotNull=Checklist Question Cannot be null
 checklistTopicNotNull=CheckList Topic Cannot be null
 
+headerValueMessage=Please Enter Valid Value For OSCE
+startEndTimeMessage=please enter start time less ten end time
+
 shiftLunchBreakNext=Shift Lunch Break Next
 ShiftLunchBreakPrev=Shift Lunch Break Previous
